# vengine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  application.hpp  glfw_window.hpp  main.cpp  severity.hpp  version.hpp  vulkan.hpp
scenes/: test.cpp  test.hpp
vengine/: allocated_buffer.cpp  allocated_buffer.hpp  allocated_image.cpp  allocated_image.hpp  event_source.hpp  io.cpp  io.hpp  log.cpp  log.hpp  mesh.cpp  mesh.hpp  ram_file.cpp  ram_file.hpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp  vengine.cpp  vengine.h  vengine.hpp
vengine/ecs/: position.hpp  renderable.hpp  rotation.hpp  velocity.hpp
vengine/vulkan-utils/: buffer_builder.hpp  descriptor_pool_builder.hpp  descriptor_set_layout_builder.hpp  descriptor_set_updater.hpp  fence_builder.hpp  image_builder.hpp  image_view_builder.hpp  pipeline_builder.hpp  pipeline_layout_builder.hpp  render_pass_builder.hpp  result.hpp  stringify.hpp  submit_builder.hpp
workingdir/shaders/: compile.bat  shader.vert  vert.spv
